--- a/Spark/code/Spark_Basics.ipynb
+++ b/Spark/code/Spark_Basics.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 9,
    "id": "3ac3c452",
    "metadata": {},
    "outputs": [],
@@ -13,7 +13,9 @@
     "import pyspark\n",
     "from pyspark import SparkContext\n",
     "from pyspark.sql.session import SparkSession\n",
-    "from pyspark import SparkConf"
+    "from pyspark import SparkConf\n",
+    "from pyspark.sql import functions as F\n",
+    "from pyspark.sql.types import DoubleType, IntegerType, StringType"
    ]
   },
   {
@@ -21,31 +23,14 @@
    "execution_count": 2,
    "id": "66fd4607",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "+-------------+---+------+-----------------------+---+-----------+-------------------------------+----------------------+\n",
-      "|Child Product|CPG| Month|Shipment in Child Cases|PPG|Parent Prod| Shipment in parent Prod Cases |Inventory_Parent_Cases|\n",
-      "+-------------+---+------+-----------------------+---+-----------+-------------------------------+----------------------+\n",
-      "|           S1| C5|201801|                     26| P1|         S1|                             26|                     0|\n",
-      "|           S2| C5|201801|                     33| P1|         S1|                             25|                     0|\n",
-      "+-------------+---+------+-----------------------+---+-----------+-------------------------------+----------------------+\n",
-      "only showing top 2 rows\n",
-      "\n",
-      "None\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "raw_data = spark.read.load(\"../data/raw_data/raw_data.csv\",format=\"csv\", sep=\",\", inferSchema=\"true\", header=\"true\")\n",
-    "print(raw_data.show(2))"
+    "raw_data = spark.read.load(\"../data/raw_data/raw_data.csv\",format=\"csv\", sep=\",\", inferSchema=\"true\", header=\"true\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "52b4cf51",
    "metadata": {},
    "outputs": [
@@ -117,19 +102,193 @@
        "1                              25                       0  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "#convert the dataframe to Pandas\n",
     "raw_data.limit(2).toPandas()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "3ef97649",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+-------------+---+------+\n",
+      "|Child Product|CPG| Month|\n",
+      "+-------------+---+------+\n",
+      "|           S1| C5|201801|\n",
+      "|           S2| C5|201801|\n",
+      "+-------------+---+------+\n",
+      "only showing top 2 rows\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Columns selection\n",
+    "col_sel = raw_data.select('Child Product', 'CPG', 'Month')\n",
+    "col_sel.show(2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "f5080a91",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+-------------+---+------+-----------------------+---+-----------+-------------------------------+----------------------+\n",
+      "|Child Product|CPG| Month|Shipment in Child Cases|PPG|Parent Prod| Shipment in parent Prod Cases |Inventory_Parent_Cases|\n",
+      "+-------------+---+------+-----------------------+---+-----------+-------------------------------+----------------------+\n",
+      "|          S32| C3|201807|                     -1|P17|        S32|                             -1|                     1|\n",
+      "|          S21| C3|201906|                     -1|P13|        S21|                             -1|                     1|\n",
+      "+-------------+---+------+-----------------------+---+-----------+-------------------------------+----------------------+\n",
+      "only showing top 2 rows\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Sorting in Spark\n",
+    "raw_data.sort(\"Shipment in Child Cases\").show(2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "fb434efb",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+-------------+---+------+-----------------------+---+-----------+-------------------------------+----------------------+\n",
+      "|Child Product|CPG| Month|Shipment in Child Cases|PPG|Parent Prod| Shipment in parent Prod Cases |Inventory_Parent_Cases|\n",
+      "+-------------+---+------+-----------------------+---+-----------+-------------------------------+----------------------+\n",
+      "|          S40| C2|201903|                    999|P11|        S66|                            999|                     0|\n",
+      "|          S33| C2|201805|                    998|P15|        S62|                            998|                    10|\n",
+      "+-------------+---+------+-----------------------+---+-----------+-------------------------------+----------------------+\n",
+      "only showing top 2 rows\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "raw_data.sort(F.desc('Shipment in Child Cases')).show(2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "c2da2345",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#cast columns\n",
+    "raw_data = raw_data.withColumn('CPG', F.col('CPG').cast(StringType()))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "39caabeb",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(Child Product                      object\n",
+       " CPG                                object\n",
+       " Month                               int32\n",
+       " Shipment in Child Cases            object\n",
+       " PPG                                object\n",
+       " Parent Prod                        object\n",
+       "  Shipment in parent Prod Cases     object\n",
+       " Inventory_Parent_Cases              int32\n",
+       " dtype: object,\n",
+       " (2079, 8))"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "raw_data.toPandas().dtypes, raw_data.toPandas().shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "a16f42cc",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+-------------+---+------+-----------------------+---+-----------+-------------------------------+----------------------+\n",
+      "|Child Product|CPG| Month|Shipment in Child Cases|PPG|Parent Prod| Shipment in parent Prod Cases |Inventory_Parent_Cases|\n",
+      "+-------------+---+------+-----------------------+---+-----------+-------------------------------+----------------------+\n",
+      "|           S1| C1|201801|                      5| P1|         S1|                              5|                     0|\n",
+      "|           S2| C1|201801|                     51| P1|         S1|                             38|                     1|\n",
+      "+-------------+---+------+-----------------------+---+-----------+-------------------------------+----------------------+\n",
+      "only showing top 2 rows\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Filter data in pyspark\n",
+    "_filter = raw_data.filter((raw_data.CPG == 'C1') & (raw_data.PPG == 'P1'))\n",
+    "_filter.show(2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "078e9027",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+---+---+------+---------+\n",
+      "|CPG|PPG| Month|Shipments|\n",
+      "+---+---+------+---------+\n",
+      "| C2|P18|201803|     10.0|\n",
+      "| C3| P6|201803|     68.0|\n",
+      "+---+---+------+---------+\n",
+      "only showing top 2 rows\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "#groupby operations in pyspark\n",
+    "_group = raw_data.groupby(['CPG', 'PPG', 'Month']).agg(F.sum(' Shipment in parent Prod Cases ').alias('Shipments'))\n",
+    "_group.show(2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ea38daaa",
    "metadata": {},
    "outputs": [],
    "source": []
